# orthanc-databases

./: .hgignore  AUTHORS  NOTES  README  TODO
Framework/Common/: BinaryStringValue.cpp  BinaryStringValue.h  DatabaseManager.cpp  DatabaseManager.h  DatabasesEnumerations.cpp  DatabasesEnumerations.h  Dictionary.cpp  Dictionary.h  FileValue.cpp  FileValue.h  GenericFormatter.cpp  GenericFormatter.h  IDatabase.h  IDatabaseFactory.h  IPrecompiledStatement.h  IResult.cpp  IResult.h  ITransaction.h  IValue.h  ImplicitTransaction.cpp  ImplicitTransaction.h  InputFileValue.cpp  InputFileValue.h  Integer32Value.cpp  Integer32Value.h  Integer64Value.cpp  Integer64Value.h  NullValue.cpp  NullValue.h  Query.cpp  Query.h  ResultBase.cpp  ResultBase.h  ResultFileValue.cpp  ResultFileValue.h  RetryDatabaseFactory.cpp  RetryDatabaseFactory.h  StatementId.cpp  StatementId.h  StatementLocation.cpp  (+3 more)
Framework/MySQL/: MySQLDatabase.cpp  MySQLDatabase.h  MySQLParameters.cpp  MySQLParameters.h  MySQLResult.cpp  MySQLResult.h  MySQLStatement.cpp  MySQLStatement.h  MySQLTransaction.cpp  MySQLTransaction.h
Framework/Odbc/: OdbcDatabase.cpp  OdbcDatabase.h  OdbcEnvironment.cpp  OdbcEnvironment.h  OdbcPreparedStatement.cpp  OdbcPreparedStatement.h  OdbcResult.cpp  OdbcResult.h  OdbcStatement.cpp  OdbcStatement.h
Framework/Plugins/: BaseIndexConnectionsPool.cpp  BaseIndexConnectionsPool.h  DatabaseBackendAdapterV2.cpp  DatabaseBackendAdapterV2.h  DatabaseBackendAdapterV3.cpp  DatabaseBackendAdapterV3.h  DatabaseBackendAdapterV4.cpp  DatabaseBackendAdapterV4.h  DatabaseConstraint.cpp  DatabaseConstraint.h  DynamicIndexConnectionsPool.cpp  DynamicIndexConnectionsPool.h  GlobalProperties.cpp  GlobalProperties.h  IDatabaseBackend.h  IDatabaseBackendOutput.h  ISqlLookupFormatter.cpp  ISqlLookupFormatter.h  IdentifierTag.h  IndexBackend.cpp  IndexBackend.h  IndexConnectionsPool.cpp  IndexConnectionsPool.h  IndexUnitTests.h  MessagesToolbox.cpp  MessagesToolbox.h  OptimizedRoutes.cpp  OptimizedRoutes.h  OrthancCppDatabasePlugin.h  PluginInitialization.cpp  PluginInitialization.h  StorageAreaBuffer.cpp  StorageAreaBuffer.h  StorageBackend.cpp  StorageBackend.h
Framework/PostgreSQL/: PostgreSQLDatabase.cpp  PostgreSQLDatabase.h  PostgreSQLIncludes.h  PostgreSQLLargeObject.cpp  PostgreSQLLargeObject.h  PostgreSQLOids.h  PostgreSQLParameters.cpp  PostgreSQLParameters.h  PostgreSQLResult.cpp  PostgreSQLResult.h  PostgreSQLStatement.cpp  PostgreSQLStatement.h  PostgreSQLTransaction.cpp  PostgreSQLTransaction.h
Framework/SQLite/: SQLiteDatabase.cpp  SQLiteDatabase.h  SQLiteResult.cpp  SQLiteResult.h  SQLiteStatement.cpp  SQLiteStatement.h  SQLiteTransaction.cpp  SQLiteTransaction.h
MySQL/: CMakeLists.txt  NEWS
MySQL/Plugins/: CreateInstance.sql  DeleteResources.sql  GetLastChangeIndex.sql  IndexPlugin.cpp  InstallRevisionAndCustomData.sql  MySQLDefinitions.h  MySQLIndex.cpp  MySQLIndex.h  MySQLStorageArea.cpp  MySQLStorageArea.h  PrepareIndex.sql  StoragePlugin.cpp
MySQL/UnitTests/: UnitTestsMain.cpp
Odbc/: CMakeLists.txt  NEWS
Odbc/Plugins/: IndexPlugin.cpp  OdbcIndex.cpp  OdbcIndex.h  PrepareIndex.sql  PrepareStorage.sql  StoragePlugin.cpp
Odbc/UnitTests/: UnitTestsMain.cpp
PostgreSQL/: CMakeLists.txt  NEWS
PostgreSQL/Plugins/: CreateInstance.sql  FastCountResources.sql  FastTotalSize.sql  FastTotalStats2.sql  GetLastChangeIndex.sql  IndexPlugin.cpp  InsertOrUpdateMetadata.sql  PostgreSQLDefinitions.h  PostgreSQLIndex.cpp  PostgreSQLIndex.h  PostgreSQLStorageArea.cpp  PostgreSQLStorageArea.h  PrepareIndex.sql  ResourceDeletedFunc.sql  StoragePlugin.cpp
PostgreSQL/Plugins/SQL/: PrepareIndex.sql  PrepareIndexV2.sql
PostgreSQL/Plugins/SQL/Downgrades/: Rev10ToRev6.sql  Rev2ToRev1.sql  Rev3ToRev2.sql  Rev3bToRev2.sql  Rev499ToRev4.sql  Rev4ToRev3.sql  Rev599ToRev5.sql  Rev5ToRev4.sql  Rev6ToRev5.sql  Rev99ToRev4.sql  V6.2ToV6.1.sql
PostgreSQL/Plugins/SQL/Upgrades/: Rev1ToRev2.sql  Rev2ToRev3.sql  Rev3ToRev4.sql  Rev4ToRev499.sql  Rev4ToRev5.sql  Rev4ToRev99.sql  Rev5ToRev6.sql  Rev6ToRev10.sql  Rev6ToRev699.sql  UnknownToV6.1.sql  V1ToV2.sql  V6.1ToV6.2.sql
PostgreSQL/Plugins/SQL/Upgrades/Partial/: Rev2_1_ReplaceChildrenIndex.sql
PostgreSQL/UnitTests/: PostgreSQLTests.cpp  UnitTestsMain.cpp
Resources/: SyncOrthancFolder.py
Resources/CMake/: DatabasesFrameworkConfiguration.cmake  DatabasesFrameworkParameters.cmake  DatabasesPluginConfiguration.cmake  DatabasesPluginParameters.cmake  FindPostgreSQL.cmake  MariaDBConfiguration.cmake  PostgreSQLConfiguration.cmake  UnixOdbcConfiguration.cmake
Resources/MariaDB/: mariadb-connector-c-3.1.11.patch
Resources/Odbc/: config.h.in
Resources/Orthanc/CMake/: Compiler.cmake  DownloadOrthancFramework.cmake  ProtobufConfiguration.cmake
Resources/Orthanc/Databases/: DatabaseConstraint.cpp  DatabaseConstraint.h  ISqlLookupFormatter.cpp  ISqlLookupFormatter.h
Resources/Orthanc/Plugins/: OrthancPluginCppWrapper.cpp  OrthancPluginCppWrapper.h
Resources/Orthanc/Sdk-1.12.10/orthanc/: OrthancDatabasePlugin.proto
Resources/Orthanc/Sdk-1.12.5/orthanc/: OrthancDatabasePlugin.proto
Resources/Orthanc/Sdk-1.12.8/orthanc/: OrthancDatabasePlugin.proto
Resources/Orthanc/Sdk-1.12.9/orthanc/: OrthancCDatabasePlugin.h  OrthancDatabasePlugin.proto
Resources/Orthanc/Sdk-1.5.2/orthanc/: OrthancCDatabasePlugin.h  OrthancCPlugin.h
Resources/PostgreSQL/: CheckTypeAlignment.cmake  PrepareCMakeConfigurationFile.py  libpq-18.1-msvc.patch
SQLite/: CMakeLists.txt  NEWS
SQLite/Plugins/: IndexPlugin.cpp  InstallCustomData.sql  PrepareIndex.sql  SQLiteIndex.cpp  SQLiteIndex.h
SQLite/UnitTests/: UnitTestsMain.cpp
